{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 58,
  "lineage": "55282bec-6f09-e29c-abd0-d2ea84fbe3a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:internet-gateway/igw-0aad1459bfe884609",
            "id": "igw-0aad1459bfe884609",
            "owner_id": "235921289734",
            "tags": {
              "Name": "dev-mastodon"
            },
            "tags_all": {
              "Name": "dev-mastodon"
            },
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev-mastodon-main-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:235921289734:loadbalancer/app/dev-mastodon-main-alb/d4b33efcf5264cc4",
            "arn_suffix": "app/dev-mastodon-main-alb/d4b33efcf5264cc4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-mastodon-main-alb-2071358680.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:235921289734:loadbalancer/app/dev-mastodon-main-alb/d4b33efcf5264cc4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-mastodon-main-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f94d922b5c7fbd7d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c1d52c786dfaaab"
              },
              {
                "subnet_id": "subnet-04a03eb34aab27681"
              }
            ],
            "subnets": [
              "subnet-01c1d52c786dfaaab",
              "subnet-04a03eb34aab27681"
            ],
            "tags": {
              "Name": "dev-mastodon"
            },
            "tags_all": {
              "Name": "dev-mastodon"
            },
            "vpc_id": "vpc-0909483ba0e013f96",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.allow_external",
            "aws_subnet.pub1",
            "aws_subnet.pub2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev-mastodon-main-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:235921289734:listener/app/dev-mastodon-main-alb/d4b33efcf5264cc4/c77ddb6d6983069e",
            "certificate_arn": "arn:aws:acm:us-west-2:235921289734:certificate/78d7154c-e7e7-4712-8e7b-ce1fb613e6e0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:235921289734:targetgroup/dev-mastodon-main-alb-http-3000/e5dbb1a8674b29aa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:235921289734:listener/app/dev-mastodon-main-alb/d4b33efcf5264cc4/c77ddb6d6983069e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:235921289734:loadbalancer/app/dev-mastodon-main-alb/d4b33efcf5264cc4",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dev-mastodon-main-alb",
            "aws_lb_target_group.http-3000",
            "aws_security_group.allow_external",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http-3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:235921289734:targetgroup/dev-mastodon-main-alb-http-3000/e5dbb1a8674b29aa",
            "arn_suffix": "targetgroup/dev-mastodon-main-alb-http-3000/e5dbb1a8674b29aa",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:235921289734:targetgroup/dev-mastodon-main-alb-http-3000/e5dbb1a8674b29aa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dev-mastodon-main-alb-http-3000",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:route-table/rtb-0755544ed853ec613",
            "id": "rtb-0755544ed853ec613",
            "owner_id": "235921289734",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aad1459bfe884609",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-mastodon"
            },
            "tags_all": {
              "Name": "dev-mastodon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa5a54085160d8b1",
            "route_table_id": "rtb-0755544ed853ec613",
            "subnet_id": "subnet-01c1d52c786dfaaab"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.pub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0373bed7fbbf9b639",
            "route_table_id": "rtb-0755544ed853ec613",
            "subnet_id": "subnet-04a03eb34aab27681"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.pub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:security-group/sg-0f94d922b5c7fbd7d",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f94d922b5c7fbd7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-mastodon-main-allow",
            "name_prefix": "",
            "owner_id": "235921289734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-mastodon-allow-external"
            },
            "tags_all": {
              "Name": "dev-mastodon-allow-external"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:security-group/sg-037bfcc7df32cad49",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037bfcc7df32cad49",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "3000 from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "4000 from VPC",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-mastodon-main-allow-internal",
            "name_prefix": "",
            "owner_id": "235921289734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-mastodon-allow-internal"
            },
            "tags_all": {
              "Name": "dev-mastodon-allow-internal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:security-group/sg-0b57c7bc22812d2de",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b57c7bc22812d2de",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres",
            "name_prefix": "",
            "owner_id": "235921289734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-mastodon"
            },
            "tags_all": {
              "Name": "dev-mastodon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:security-group/sg-07257349d97a086f0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07257349d97a086f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis",
            "name_prefix": "",
            "owner_id": "235921289734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-mastodon"
            },
            "tags_all": {
              "Name": "dev-mastodon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:subnet/subnet-02b5d79f792e058cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b5d79f792e058cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235921289734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-mastodon-priv1"
            },
            "tags_all": {
              "Name": "dev-mastodon-priv1"
            },
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:subnet/subnet-0bc124fee5fc80c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc124fee5fc80c30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235921289734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-mastodon-priv2"
            },
            "tags_all": {
              "Name": "dev-mastodon-priv2"
            },
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:subnet/subnet-01c1d52c786dfaaab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c1d52c786dfaaab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235921289734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-mastodon-pub1"
            },
            "tags_all": {
              "Name": "dev-mastodon-pub1"
            },
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:subnet/subnet-04a03eb34aab27681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a03eb34aab27681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235921289734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-mastodon-pub2"
            },
            "tags_all": {
              "Name": "dev-mastodon-pub2"
            },
            "vpc_id": "vpc-0909483ba0e013f96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235921289734:vpc/vpc-0909483ba0e013f96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b69aa0d6058aef43",
            "default_route_table_id": "rtb-0eb132e3c1b479879",
            "default_security_group_id": "sg-00113e5229d804d36",
            "dhcp_options_id": "dopt-0417a0741ce82d322",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0909483ba0e013f96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb132e3c1b479879",
            "owner_id": "235921289734",
            "tags": {
              "Name": "dev-mastodon"
            },
            "tags_all": {
              "Name": "dev-mastodon"
            }
          }
        }
      ]
    }
  ]
}